<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">당근과 채찍</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">유저 닉네임 가져올 부분</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="goal">최종 목표</string>
    <string name="goal_progress">최종 목표 달성량</string>

    <string name="insert_goal">목표를 입력하세요</string>
    <string name="insert_sub_goal">세부 목표를 추가하세요</string>
    <string name="sub_goal">세부 목표</string>
    <string name="cancel">취소</string>
    <string name="done">완료</string>
    <string name="modify">수정</string>

    <string name="join">JOIN</string>
    <string name="login">LOGIN</string>
    <string name="id">id</string>
    <string name="password">password</string>
    <string name="join_kr">회원가입</string>

    <string name="date_kr">날짜</string>
    <string name="todo_kr">할 일</string>
    <string name="insert_todo">할 일을 입력하세요</string>
    <string name="insert">추가하기</string>

    <string name="zero_percent">0%</string>

    <string name="image_carrot_copyright">당근 이미지 저작권자 : https://www.flaticon.com/kr/authors/freepik</string>
    <string name="image_whip_copyright">채찍 이미지 저작권자 : https://www.flaticon.com/kr/authors/eucalyp</string>
    <string name="image_house_copyright">집 이미지 저작권자 : https://www.flaticon.com/kr/authors/freepik</string>
    <string name="image_todo_copyright">할 일 이미지 저작권자 : https://www.flaticon.com/kr/authors/kiranshastry</string>
    <string name="image_goal_copyright">목표 이미지 저작권자 : https://www.flaticon.com/kr/authors/phatplus</string>
    <string name="image_shop_copyright">상점 이미지 저작권자 : https://www.flaticon.com/kr/authors/freepik</string>
    <string name="image_setting_copyright">설정 이미지 저작권자 : https://www.flaticon.com/kr/authors/freepik</string>
    <string name="font_copyright">폰트 저작권자 : DX korea (비상업적 어플리케이션 입니다)</string>


    <string name="item_name">아이템 명</string>
    <string name="point">포인트</string>
    <string name="plus">+</string>

    <string name="today_todo">오늘의 할 일</string>

    <string name="drawer_main">메인으로</string>
    <string name="drawer_today_todo">오늘 할 일</string>
    <string name="drawer_goal">내 목표</string>
    <string name="drawer_shop">상점</string>
    <string name="drawer_setting">설정</string>

</resources>
