<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:fontFamily="@font/dxgulim"
            android:icon="@drawable/main"
            android:title="@string/drawer_main" />
        <item
            android:id="@+id/nav_todo"
            android:fontFamily="@font/dxgulim"
            android:icon="@drawable/todo"
            android:title="@string/drawer_today_todo" />
        <item
            android:id="@+id/nav_goals"
            android:fontFamily="@font/dxgulim"
            android:icon="@drawable/goals"
            android:title="@string/drawer_goal" />
        <item
            android:id="@+id/nav_shop"
            android:fontFamily="@font/dxgulim"
            android:icon="@drawable/shop"
            android:title="@string/drawer_shop" />
        <item
            android:id="@+id/nav_setting"
            android:fontFamily="@font/dxgulim"
            android:icon="@drawable/setting"
            android:title="@string/drawer_setting" />
    </group>

</menu>
