<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context=".activity.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/index9"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/goal"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/goalEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:fontFamily="@font/dxgulim"
                android:gravity="center"
                android:hint="@string/insert_goal"
                android:textSize="22sp"
                android:theme="@style/EditTheme" />

            <TextView
                android:id="@+id/subGoalTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:background="@color/index10"
                android:gravity="center"
                android:text="@string/sub_goal"
                android:textColor="#000"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addRecyclerView"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <ImageButton
                android:id="@+id/addSubBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_add_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color"
                android:text="@string/done" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>